--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
