--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
+    "qrcanvas": "^3.1.2",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-use-styles": "^1.0.4",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3"
